src/shim_block.h

struct io_comp_batch;
/*
 * The Rust bindings intentionally expose block_device_operations callbacks as
 * opaque one-argument callbacks.  Keep the C side ABI-compatible with that.
 */
typedef void (*rs_bdo_callback_t)(void *);
/* blk-mq callback typedefs matching rust/src/bindings.rs */
typedef blk_status_t (*rs_blk_mq_queue_rq_callback_t)(
		struct blk_mq_hw_ctx *, const struct blk_mq_queue_data *);
typedef void (*rs_blk_mq_void_callback_t)(void *);
typedef void (*rs_blk_mq_commit_rqs_callback_t)(struct blk_mq_hw_ctx *);
typedef int (*rs_blk_mq_get_budget_callback_t)(void *);
typedef void (*rs_blk_mq_put_budget_callback_t)(void *, int);
typedef void (*rs_blk_mq_set_rq_budget_token_callback_t)(struct request *, int);
typedef int (*rs_blk_mq_get_rq_budget_token_callback_t)(struct request *);
typedef int (*rs_blk_mq_timeout_callback_t)(struct request *);
typedef int (*rs_blk_mq_poll_callback_t)(struct blk_mq_hw_ctx *,
					 struct io_comp_batch *);
typedef void (*rs_blk_mq_complete_callback_t)(struct request *);
typedef int (*rs_blk_mq_init_hctx_callback_t)(struct blk_mq_hw_ctx *, void *,
					      unsigned int);
typedef void (*rs_blk_mq_exit_hctx_callback_t)(struct blk_mq_hw_ctx *,
					       unsigned int);
typedef int (*rs_blk_mq_init_request_callback_t)(struct blk_mq_tag_set *,
						 struct request *,
						 unsigned int, unsigned int);
typedef void (*rs_blk_mq_exit_request_callback_t)(struct blk_mq_tag_set *,
						   struct request *,
						   unsigned int);
typedef void (*rs_blk_mq_cleanup_rq_callback_t)(struct request *);
typedef bool (*rs_blk_mq_busy_callback_t)(void *);
typedef void (*rs_blk_mq_map_queues_callback_t)(struct blk_mq_tag_set *);
typedef void (*rs_blk_mq_show_rq_callback_t)(struct seq_file *,
					     struct request *);
/* blk_mq_queue_data accessors */
struct request *rs_blk_mq_queue_data_rq(const struct blk_mq_queue_data *obj);
void rs_blk_mq_queue_data_set_rq(struct blk_mq_queue_data *obj,
				 struct request *value);
bool rs_blk_mq_queue_data_last(const struct blk_mq_queue_data *obj);
void rs_blk_mq_queue_data_set_last(struct blk_mq_queue_data *obj, bool value);
/* blk_mq_tag_set accessors */
const struct blk_mq_ops *rs_blk_mq_tag_set_ops(const struct blk_mq_tag_set *obj);
void rs_blk_mq_tag_set_set_ops(struct blk_mq_tag_set *obj,
			       const struct blk_mq_ops *value);
u32 rs_blk_mq_tag_set_nr_maps(const struct blk_mq_tag_set *obj);
void rs_blk_mq_tag_set_set_nr_maps(struct blk_mq_tag_set *obj, u32 value);
u32 rs_blk_mq_tag_set_nr_hw_queues(const struct blk_mq_tag_set *obj);
void rs_blk_mq_tag_set_set_nr_hw_queues(struct blk_mq_tag_set *obj, u32 value);
u32 rs_blk_mq_tag_set_queue_depth(const struct blk_mq_tag_set *obj);
void rs_blk_mq_tag_set_set_queue_depth(struct blk_mq_tag_set *obj, u32 value);
u32 rs_blk_mq_tag_set_reserved_tags(const struct blk_mq_tag_set *obj);
void rs_blk_mq_tag_set_set_reserved_tags(struct blk_mq_tag_set *obj, u32 value);
u32 rs_blk_mq_tag_set_cmd_size(const struct blk_mq_tag_set *obj);
void rs_blk_mq_tag_set_set_cmd_size(struct blk_mq_tag_set *obj, u32 value);
int rs_blk_mq_tag_set_numa_node(const struct blk_mq_tag_set *obj);
void rs_blk_mq_tag_set_set_numa_node(struct blk_mq_tag_set *obj, int value);
u32 rs_blk_mq_tag_set_timeout(const struct blk_mq_tag_set *obj);
void rs_blk_mq_tag_set_set_timeout(struct blk_mq_tag_set *obj, u32 value);
u32 rs_blk_mq_tag_set_flags(const struct blk_mq_tag_set *obj);
void rs_blk_mq_tag_set_set_flags(struct blk_mq_tag_set *obj, u32 value);
void *rs_blk_mq_tag_set_driver_data(const struct blk_mq_tag_set *obj);
void rs_blk_mq_tag_set_set_driver_data(struct blk_mq_tag_set *obj, void *value);
/* blk_mq_ops accessors */
rs_blk_mq_queue_rq_callback_t rs_blk_mq_ops_queue_rq(
		const struct blk_mq_ops *obj);
void rs_blk_mq_ops_set_queue_rq(struct blk_mq_ops *obj,
				rs_blk_mq_queue_rq_callback_t value);
rs_blk_mq_void_callback_t rs_blk_mq_ops_queue_rqs(const struct blk_mq_ops *obj);
void rs_blk_mq_ops_set_queue_rqs(struct blk_mq_ops *obj,
				 rs_blk_mq_void_callback_t value);
rs_blk_mq_commit_rqs_callback_t rs_blk_mq_ops_commit_rqs(
		const struct blk_mq_ops *obj);
void rs_blk_mq_ops_set_commit_rqs(struct blk_mq_ops *obj,
				  rs_blk_mq_commit_rqs_callback_t value);
rs_blk_mq_get_budget_callback_t rs_blk_mq_ops_get_budget(
		const struct blk_mq_ops *obj);
void rs_blk_mq_ops_set_get_budget(struct blk_mq_ops *obj,
				  rs_blk_mq_get_budget_callback_t value);
rs_blk_mq_put_budget_callback_t rs_blk_mq_ops_put_budget(
		const struct blk_mq_ops *obj);
void rs_blk_mq_ops_set_put_budget(struct blk_mq_ops *obj,
				  rs_blk_mq_put_budget_callback_t value);
rs_blk_mq_set_rq_budget_token_callback_t rs_blk_mq_ops_set_rq_budget_token(
		const struct blk_mq_ops *obj);
void rs_blk_mq_ops_set_set_rq_budget_token(struct blk_mq_ops *obj,
		rs_blk_mq_set_rq_budget_token_callback_t value);
rs_blk_mq_get_rq_budget_token_callback_t rs_blk_mq_ops_get_rq_budget_token(
		const struct blk_mq_ops *obj);
void rs_blk_mq_ops_set_get_rq_budget_token(struct blk_mq_ops *obj,
		rs_blk_mq_get_rq_budget_token_callback_t value);
rs_blk_mq_timeout_callback_t rs_blk_mq_ops_timeout(
		const struct blk_mq_ops *obj);
void rs_blk_mq_ops_set_timeout(struct blk_mq_ops *obj,
			       rs_blk_mq_timeout_callback_t value);
rs_blk_mq_poll_callback_t rs_blk_mq_ops_poll(const struct blk_mq_ops *obj);
void rs_blk_mq_ops_set_poll(struct blk_mq_ops *obj,
			    rs_blk_mq_poll_callback_t value);
rs_blk_mq_complete_callback_t rs_blk_mq_ops_complete(
		const struct blk_mq_ops *obj);
void rs_blk_mq_ops_set_complete(struct blk_mq_ops *obj,
				rs_blk_mq_complete_callback_t value);
rs_blk_mq_init_hctx_callback_t rs_blk_mq_ops_init_hctx(
		const struct blk_mq_ops *obj);
void rs_blk_mq_ops_set_init_hctx(struct blk_mq_ops *obj,
				 rs_blk_mq_init_hctx_callback_t value);
rs_blk_mq_exit_hctx_callback_t rs_blk_mq_ops_exit_hctx(
		const struct blk_mq_ops *obj);
void rs_blk_mq_ops_set_exit_hctx(struct blk_mq_ops *obj,
				 rs_blk_mq_exit_hctx_callback_t value);
rs_blk_mq_init_request_callback_t rs_blk_mq_ops_init_request(
		const struct blk_mq_ops *obj);
void rs_blk_mq_ops_set_init_request(struct blk_mq_ops *obj,
				    rs_blk_mq_init_request_callback_t value);
rs_blk_mq_exit_request_callback_t rs_blk_mq_ops_exit_request(
		const struct blk_mq_ops *obj);
void rs_blk_mq_ops_set_exit_request(struct blk_mq_ops *obj,
				    rs_blk_mq_exit_request_callback_t value);
rs_blk_mq_cleanup_rq_callback_t rs_blk_mq_ops_cleanup_rq(
		const struct blk_mq_ops *obj);
void rs_blk_mq_ops_set_cleanup_rq(struct blk_mq_ops *obj,
				  rs_blk_mq_cleanup_rq_callback_t value);
rs_blk_mq_busy_callback_t rs_blk_mq_ops_busy(const struct blk_mq_ops *obj);
void rs_blk_mq_ops_set_busy(struct blk_mq_ops *obj,
			    rs_blk_mq_busy_callback_t value);
rs_blk_mq_map_queues_callback_t rs_blk_mq_ops_map_queues(
		const struct blk_mq_ops *obj);
void rs_blk_mq_ops_set_map_queues(struct blk_mq_ops *obj,
				  rs_blk_mq_map_queues_callback_t value);
rs_blk_mq_show_rq_callback_t rs_blk_mq_ops_show_rq(
		const struct blk_mq_ops *obj);
void rs_blk_mq_ops_set_show_rq(struct blk_mq_ops *obj,
			       rs_blk_mq_show_rq_callback_t value);
struct module *rs_block_device_operations_owner(
		const struct block_device_operations *obj);
void rs_block_device_operations_set_owner(struct block_device_operations *obj,
					  struct module *value);
void *rs_block_device_operations_pr_ops(
		const struct block_device_operations *obj);
void rs_block_device_operations_set_pr_ops(struct block_device_operations *obj,
					   void *value);
rs_bdo_callback_t rs_block_device_operations_free_disk(
		const struct block_device_operations *obj);
void rs_block_device_operations_set_free_disk(
		struct block_device_operations *obj, rs_bdo_callback_t value);
rs_bdo_callback_t rs_block_device_operations_poll_bio(
		const struct block_device_operations *obj);
void rs_block_device_operations_set_poll_bio(
		struct block_device_operations *obj, rs_bdo_callback_t value);
/* gendisk accessors */
const struct block_device_operations *rs_gendisk_fops(
		const struct gendisk *obj);
void rs_gendisk_set_fops(struct gendisk *obj,
			 const struct block_device_operations *value);
char *rs_gendisk_disk_name(struct gendisk *obj);