rust/src/bindings.rs

    #[link_name = "rs_block_device_operations_owner"]
    pub fn rs_block_device_operations_owner(obj: *const block_device_operations) -> *mut module;
    #[link_name = "rs_block_device_operations_set_owner"]
    pub fn rs_block_device_operations_set_owner(obj: *mut block_device_operations, value: *mut module);
    #[link_name = "rs_block_device_operations_pr_ops"]
    pub fn rs_block_device_operations_pr_ops(obj: *const block_device_operations) -> *mut c_void;
    #[link_name = "rs_block_device_operations_set_pr_ops"]
    pub fn rs_block_device_operations_set_pr_ops(obj: *mut block_device_operations, value: *mut c_void);
    #[link_name = "rs_block_device_operations_free_disk"]
    pub fn rs_block_device_operations_free_disk(obj: *const block_device_operations) -> Option<unsafe extern "C" fn(*mut c_void)>;
    #[link_name = "rs_block_device_operations_set_free_disk"]
    pub fn rs_block_device_operations_set_free_disk(obj: *mut block_device_operations, value: Option<unsafe extern "C" fn(*mut c_void)>);
    #[link_name = "rs_block_device_operations_poll_bio"]
    pub fn rs_block_device_operations_poll_bio(obj: *const block_device_operations) -> Option<unsafe extern "C" fn(*mut c_void)>;
    #[link_name = "rs_block_device_operations_set_poll_bio"]
    pub fn rs_block_device_operations_set_poll_bio(obj: *mut block_device_operations, value: Option<unsafe extern "C" fn(*mut c_void)>);
    // gendisk accessors.
    #[link_name = "rs_gendisk_fops"]
    pub fn rs_gendisk_fops(obj: *const gendisk) -> *const block_device_operations;
    #[link_name = "rs_gendisk_set_fops"]
    pub fn rs_gendisk_set_fops(obj: *mut gendisk, value: *const block_device_operations);
    #[link_name = "rs_gendisk_disk_name"]
    pub fn rs_gendisk_disk_name(obj: *mut gendisk) -> *mut c_char;
    // blk_mq_queue_data accessors.
    #[link_name = "rs_blk_mq_queue_data_rq"]
    pub fn rs_blk_mq_queue_data_rq(obj: *const blk_mq_queue_data) -> *mut request;
    #[link_name = "rs_blk_mq_queue_data_set_rq"]
    pub fn rs_blk_mq_queue_data_set_rq(obj: *mut blk_mq_queue_data, value: *mut request);
    #[link_name = "rs_blk_mq_queue_data_last"]
    pub fn rs_blk_mq_queue_data_last(obj: *const blk_mq_queue_data) -> bool;
    #[link_name = "rs_blk_mq_queue_data_set_last"]
    pub fn rs_blk_mq_queue_data_set_last(obj: *mut blk_mq_queue_data, value: bool);
    // blk_mq_tag_set accessors.
    #[link_name = "rs_blk_mq_tag_set_ops"]
    pub fn rs_blk_mq_tag_set_ops(obj: *const blk_mq_tag_set) -> *const blk_mq_ops;
    #[link_name = "rs_blk_mq_tag_set_set_ops"]
    pub fn rs_blk_mq_tag_set_set_ops(obj: *mut blk_mq_tag_set, value: *const blk_mq_ops);
    #[link_name = "rs_blk_mq_tag_set_nr_maps"]
    pub fn rs_blk_mq_tag_set_nr_maps(obj: *const blk_mq_tag_set) -> u32;
    #[link_name = "rs_blk_mq_tag_set_set_nr_maps"]
    pub fn rs_blk_mq_tag_set_set_nr_maps(obj: *mut blk_mq_tag_set, value: u32);
    #[link_name = "rs_blk_mq_tag_set_nr_hw_queues"]
    pub fn rs_blk_mq_tag_set_nr_hw_queues(obj: *const blk_mq_tag_set) -> u32;
    #[link_name = "rs_blk_mq_tag_set_set_nr_hw_queues"]
    pub fn rs_blk_mq_tag_set_set_nr_hw_queues(obj: *mut blk_mq_tag_set, value: u32);
    #[link_name = "rs_blk_mq_tag_set_queue_depth"]
    pub fn rs_blk_mq_tag_set_queue_depth(obj: *const blk_mq_tag_set) -> u32;
    #[link_name = "rs_blk_mq_tag_set_set_queue_depth"]
    pub fn rs_blk_mq_tag_set_set_queue_depth(obj: *mut blk_mq_tag_set, value: u32);
    #[link_name = "rs_blk_mq_tag_set_reserved_tags"]
    pub fn rs_blk_mq_tag_set_reserved_tags(obj: *const blk_mq_tag_set) -> u32;
    #[link_name = "rs_blk_mq_tag_set_set_reserved_tags"]
    pub fn rs_blk_mq_tag_set_set_reserved_tags(obj: *mut blk_mq_tag_set, value: u32);
    #[link_name = "rs_blk_mq_tag_set_cmd_size"]
    pub fn rs_blk_mq_tag_set_cmd_size(obj: *const blk_mq_tag_set) -> u32;
    #[link_name = "rs_blk_mq_tag_set_set_cmd_size"]
    pub fn rs_blk_mq_tag_set_set_cmd_size(obj: *mut blk_mq_tag_set, value: u32);
    #[link_name = "rs_blk_mq_tag_set_numa_node"]
    pub fn rs_blk_mq_tag_set_numa_node(obj: *const blk_mq_tag_set) -> c_int;
    #[link_name = "rs_blk_mq_tag_set_set_numa_node"]
    pub fn rs_blk_mq_tag_set_set_numa_node(obj: *mut blk_mq_tag_set, value: c_int);
    #[link_name = "rs_blk_mq_tag_set_timeout"]
    pub fn rs_blk_mq_tag_set_timeout(obj: *const blk_mq_tag_set) -> u32;
    #[link_name = "rs_blk_mq_tag_set_set_timeout"]
    pub fn rs_blk_mq_tag_set_set_timeout(obj: *mut blk_mq_tag_set, value: u32);
    #[link_name = "rs_blk_mq_tag_set_flags"]
    pub fn rs_blk_mq_tag_set_flags(obj: *const blk_mq_tag_set) -> u32;
    #[link_name = "rs_blk_mq_tag_set_set_flags"]
    pub fn rs_blk_mq_tag_set_set_flags(obj: *mut blk_mq_tag_set, value: u32);
    #[link_name = "rs_blk_mq_tag_set_driver_data"]
    pub fn rs_blk_mq_tag_set_driver_data(obj: *const blk_mq_tag_set) -> *mut c_void;
    #[link_name = "rs_blk_mq_tag_set_set_driver_data"]
    pub fn rs_blk_mq_tag_set_set_driver_data(obj: *mut blk_mq_tag_set, value: *mut c_void);
    // blk_mq_ops accessors.
    #[link_name = "rs_blk_mq_ops_queue_rq"]
    pub fn rs_blk_mq_ops_queue_rq(obj: *const blk_mq_ops) -> Option<unsafe extern "C" fn(*mut blk_mq_hw_ctx, *const blk_mq_queue_data) -> blk_status_t>;
    #[link_name = "rs_blk_mq_ops_set_queue_rq"]
    pub fn rs_blk_mq_ops_set_queue_rq(obj: *mut blk_mq_ops, value: Option<unsafe extern "C" fn(*mut blk_mq_hw_ctx, *const blk_mq_queue_data) -> blk_status_t>);
    #[link_name = "rs_blk_mq_ops_queue_rqs"]
    pub fn rs_blk_mq_ops_queue_rqs(obj: *const blk_mq_ops) -> Option<unsafe extern "C" fn(*mut c_void)>;
    #[link_name = "rs_blk_mq_ops_set_queue_rqs"]
    pub fn rs_blk_mq_ops_set_queue_rqs(obj: *mut blk_mq_ops, value: Option<unsafe extern "C" fn(*mut c_void)>);
    #[link_name = "rs_blk_mq_ops_commit_rqs"]
    pub fn rs_blk_mq_ops_commit_rqs(obj: *const blk_mq_ops) -> Option<unsafe extern "C" fn(*mut blk_mq_hw_ctx)>;
    #[link_name = "rs_blk_mq_ops_set_commit_rqs"]
    pub fn rs_blk_mq_ops_set_commit_rqs(obj: *mut blk_mq_ops, value: Option<unsafe extern "C" fn(*mut blk_mq_hw_ctx)>);
    #[link_name = "rs_blk_mq_ops_get_budget"]
    pub fn rs_blk_mq_ops_get_budget(obj: *const blk_mq_ops) -> Option<unsafe extern "C" fn(*mut c_void) -> c_int>;
    #[link_name = "rs_blk_mq_ops_set_get_budget"]
    pub fn rs_blk_mq_ops_set_get_budget(obj: *mut blk_mq_ops, value: Option<unsafe extern "C" fn(*mut c_void) -> c_int>);
    #[link_name = "rs_blk_mq_ops_put_budget"]
    pub fn rs_blk_mq_ops_put_budget(obj: *const blk_mq_ops) -> Option<unsafe extern "C" fn(*mut c_void, c_int)>;
    #[link_name = "rs_blk_mq_ops_set_put_budget"]
    pub fn rs_blk_mq_ops_set_put_budget(obj: *mut blk_mq_ops, value: Option<unsafe extern "C" fn(*mut c_void, c_int)>);
    #[link_name = "rs_blk_mq_ops_set_rq_budget_token"]
    pub fn rs_blk_mq_ops_set_rq_budget_token(obj: *const blk_mq_ops) -> Option<unsafe extern "C" fn(*mut request, c_int)>;
    #[link_name = "rs_blk_mq_ops_set_set_rq_budget_token"]
    pub fn rs_blk_mq_ops_set_set_rq_budget_token(obj: *mut blk_mq_ops, value: Option<unsafe extern "C" fn(*mut request, c_int)>);
    #[link_name = "rs_blk_mq_ops_get_rq_budget_token"]
    pub fn rs_blk_mq_ops_get_rq_budget_token(obj: *const blk_mq_ops) -> Option<unsafe extern "C" fn(*mut request) -> c_int>;
    #[link_name = "rs_blk_mq_ops_set_get_rq_budget_token"]
    pub fn rs_blk_mq_ops_set_get_rq_budget_token(obj: *mut blk_mq_ops, value: Option<unsafe extern "C" fn(*mut request) -> c_int>);
    #[link_name = "rs_blk_mq_ops_timeout"]
    pub fn rs_blk_mq_ops_timeout(obj: *const blk_mq_ops) -> Option<unsafe extern "C" fn(*mut request) -> c_int>;
    #[link_name = "rs_blk_mq_ops_set_timeout"]
    pub fn rs_blk_mq_ops_set_timeout(obj: *mut blk_mq_ops, value: Option<unsafe extern "C" fn(*mut request) -> c_int>);
    #[link_name = "rs_blk_mq_ops_poll"]
    pub fn rs_blk_mq_ops_poll(obj: *const blk_mq_ops) -> Option<unsafe extern "C" fn(*mut blk_mq_hw_ctx, *mut io_comp_batch) -> c_int>;
    #[link_name = "rs_blk_mq_ops_set_poll"]
    pub fn rs_blk_mq_ops_set_poll(obj: *mut blk_mq_ops, value: Option<unsafe extern "C" fn(*mut blk_mq_hw_ctx, *mut io_comp_batch) -> c_int>);
    #[link_name = "rs_blk_mq_ops_complete"]
    pub fn rs_blk_mq_ops_complete(obj: *const blk_mq_ops) -> Option<unsafe extern "C" fn(*mut request)>;
    #[link_name = "rs_blk_mq_ops_set_complete"]
    pub fn rs_blk_mq_ops_set_complete(obj: *mut blk_mq_ops, value: Option<unsafe extern "C" fn(*mut request)>);
    #[link_name = "rs_blk_mq_ops_init_hctx"]
    pub fn rs_blk_mq_ops_init_hctx(obj: *const blk_mq_ops) -> Option<unsafe extern "C" fn(*mut blk_mq_hw_ctx, *mut c_void, c_uint) -> c_int>;
    #[link_name = "rs_blk_mq_ops_set_init_hctx"]
    pub fn rs_blk_mq_ops_set_init_hctx(obj: *mut blk_mq_ops, value: Option<unsafe extern "C" fn(*mut blk_mq_hw_ctx, *mut c_void, c_uint) -> c_int>);
    #[link_name = "rs_blk_mq_ops_exit_hctx"]
    pub fn rs_blk_mq_ops_exit_hctx(obj: *const blk_mq_ops) -> Option<unsafe extern "C" fn(*mut blk_mq_hw_ctx, c_uint)>;
    #[link_name = "rs_blk_mq_ops_set_exit_hctx"]
    pub fn rs_blk_mq_ops_set_exit_hctx(obj: *mut blk_mq_ops, value: Option<unsafe extern "C" fn(*mut blk_mq_hw_ctx, c_uint)>);
    #[link_name = "rs_blk_mq_ops_init_request"]
    pub fn rs_blk_mq_ops_init_request(obj: *const blk_mq_ops) -> Option<unsafe extern "C" fn(*mut blk_mq_tag_set, *mut request, c_uint, c_uint) -> c_int>;
    #[link_name = "rs_blk_mq_ops_set_init_request"]
    pub fn rs_blk_mq_ops_set_init_request(obj: *mut blk_mq_ops, value: Option<unsafe extern "C" fn(*mut blk_mq_tag_set, *mut request, c_uint, c_uint) -> c_int>);
    #[link_name = "rs_blk_mq_ops_exit_request"]
    pub fn rs_blk_mq_ops_exit_request(obj: *const blk_mq_ops) -> Option<unsafe extern "C" fn(*mut blk_mq_tag_set, *mut request, c_uint)>;
    #[link_name = "rs_blk_mq_ops_set_exit_request"]
    pub fn rs_blk_mq_ops_set_exit_request(obj: *mut blk_mq_ops, value: Option<unsafe extern "C" fn(*mut blk_mq_tag_set, *mut request, c_uint)>);
    #[link_name = "rs_blk_mq_ops_cleanup_rq"]
    pub fn rs_blk_mq_ops_cleanup_rq(obj: *const blk_mq_ops) -> Option<unsafe extern "C" fn(*mut request)>;
    #[link_name = "rs_blk_mq_ops_set_cleanup_rq"]
    pub fn rs_blk_mq_ops_set_cleanup_rq(obj: *mut blk_mq_ops, value: Option<unsafe extern "C" fn(*mut request)>);
    #[link_name = "rs_blk_mq_ops_busy"]
    pub fn rs_blk_mq_ops_busy(obj: *const blk_mq_ops) -> Option<unsafe extern "C" fn(*mut c_void) -> bool>;
    #[link_name = "rs_blk_mq_ops_set_busy"]
    pub fn rs_blk_mq_ops_set_busy(obj: *mut blk_mq_ops, value: Option<unsafe extern "C" fn(*mut c_void) -> bool>);
    #[link_name = "rs_blk_mq_ops_map_queues"]
    pub fn rs_blk_mq_ops_map_queues(obj: *const blk_mq_ops) -> Option<unsafe extern "C" fn(*mut blk_mq_tag_set)>;
    #[link_name = "rs_blk_mq_ops_set_map_queues"]
    pub fn rs_blk_mq_ops_set_map_queues(obj: *mut blk_mq_ops, value: Option<unsafe extern "C" fn(*mut blk_mq_tag_set)>);
    #[link_name = "rs_blk_mq_ops_show_rq"]
    pub fn rs_blk_mq_ops_show_rq(obj: *const blk_mq_ops) -> Option<unsafe extern "C" fn(*mut seq_file, *mut request)>;
    #[link_name = "rs_blk_mq_ops_set_show_rq"]
    pub fn rs_blk_mq_ops_set_show_rq(obj: *mut blk_mq_ops, value: Option<unsafe extern "C" fn(*mut seq_file, *mut request)>);
    // KUnit runtime initializers.
    #[link_name = "rs_kunit_case_array_init"]
    pub fn rs_kunit_case_array_init(
        cases: *mut c_void,
        index: c_uint,
        run_case: Option<unsafe extern "C" fn(*mut kunit)>,
        name: *const c_char,
    );
    #[link_name = "rs_kunit_case_array_init_null"]
    pub fn rs_kunit_case_array_init_null(cases: *mut c_void, index: c_uint);
    #[link_name = "rs_kunit_suite_init_rust"]
    pub fn rs_kunit_suite_init_rust(suite: *mut c_void, name: *const c_char, test_cases: *mut c_void);
    #[link_name = "rs_module_kunit_suites"]
    pub fn rs_module_kunit_suites(module: *mut module) -> *mut *mut kunit_suite;
